// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PanelContainer openTab 1`] = `
<DocumentFragment>
  <div>
    <div
      class="css-15owl46"
    >
      <div
        class="css-x60p33"
      >
        <div
          class="css-1vga9oy"
        >
          <button
            aria-label="display panel 1"
            class="css-1tf4h46"
          >
            close panel-1
          </button>
        </div>
        <div
          class="css-7d11p2"
        >
          <button
            aria-label="display panel 2"
            class="css-1tf4h46"
          >
            open panel-2
          </button>
        </div>
        <div
          class="css-7d11p2"
        >
          <button
            aria-label="some action without panel"
            class="css-1tf4h46"
          >
            action
          </button>
        </div>
      </div>
    </div>
    <div
      class="css-eqxzio"
    >
      <div>
        <svg
          aria-valuemax="1"
          aria-valuemin="0"
          aria-valuenow="1"
          class="css-14d2907"
          fill="none"
          height="128"
          role="img"
          stroke="currentcolor"
          stroke-width="2"
          viewBox="0 0 32 32"
          width="128"
        >
          <circle
            cx="16"
            cy="16"
            opacity="0.125"
            r="14"
          />
          <circle
            cx="16"
            cy="16"
            r="14"
            stroke-dasharray="87.96459430051421"
            stroke-dashoffset="0"
            transform="rotate(-90 16 16)"
          />
        </svg>
      </div>
      <div
        aria-hidden="true"
        class="rah-animating rah-animating--down rah-animating--to-height-auto"
        style="height: 0px; overflow: hidden; transition: height 250ms ease 0ms;"
      >
        <div
          style=""
        >
          <div
            class="css-nm5f2c-Tabs"
          >
            <div
              class="react-tabs"
              data-tabs="true"
            >
              <ul
                class="react-tabs__tab-list"
                hidden=""
                role="tablist"
                style="text-align: right;"
              >
                <li
                  aria-controls="react-tabs-1"
                  aria-disabled="false"
                  aria-selected="false"
                  class="react-tabs__tab"
                  id="react-tabs-0"
                  role="tab"
                >
                  panel-2
                </li>
                <li
                  aria-controls="react-tabs-3"
                  aria-disabled="false"
                  aria-selected="true"
                  class="react-tabs__tab react-tabs__tab--selected"
                  id="react-tabs-2"
                  role="tab"
                  tabindex="0"
                >
                  panel-1
                </li>
              </ul>
              <div
                aria-labelledby="react-tabs-0"
                class="react-tabs__tab-panel"
                id="react-tabs-1"
                role="tabpanel"
              />
              <div
                aria-labelledby="react-tabs-2"
                class="react-tabs__tab-panel react-tabs__tab-panel--selected"
                id="react-tabs-3"
                role="tabpanel"
              >
                <div>
                  <h2>
                    panel 1
                  </h2>
                  <svg
                    aria-valuemax="1"
                    aria-valuemin="0"
                    aria-valuenow="0.5"
                    class="css-14d2907"
                    fill="none"
                    height="64"
                    role="img"
                    stroke="currentcolor"
                    stroke-width="2"
                    viewBox="0 0 32 32"
                    width="64"
                  >
                    <circle
                      cx="16"
                      cy="16"
                      opacity="0.125"
                      r="14"
                    />
                    <circle
                      cx="16"
                      cy="16"
                      r="14"
                      stroke-dasharray="87.96459430051421"
                      stroke-dashoffset="43.982297150257104"
                      transform="rotate(-90 16 16)"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PanelContainer overview 1`] = `
<DocumentFragment>
  <div
    class="css-vurnku"
    style="width: 100%;"
  >
    <div>
      <div
        class="css-15owl46"
      >
        <div
          class="css-x60p33"
        >
          <div
            class="css-1vga9oy"
          >
            <button
              aria-label="display panel 1"
              class="css-1tf4h46"
            >
              open panel-1
            </button>
          </div>
          <div
            class="css-7d11p2"
          >
            <button
              aria-label="display panel 2"
              class="css-1tf4h46"
            >
              open panel-2
            </button>
          </div>
          <div
            class="css-7d11p2"
          >
            <button
              aria-label="some action without panel"
              class="css-1tf4h46"
            >
              action
            </button>
          </div>
        </div>
      </div>
      <div
        class="css-eqxzio"
      >
        <div>
          <div
            class="css-12y95y7"
          >
            <svg
              aria-valuemax="1"
              aria-valuemin="0"
              aria-valuenow="1"
              class="css-14d2907"
              fill="none"
              height="128"
              role="img"
              stroke="currentcolor"
              stroke-width="2"
              viewBox="0 0 32 32"
              width="128"
            >
              <circle
                cx="16"
                cy="16"
                opacity="0.125"
                r="14"
              />
              <circle
                cx="16"
                cy="16"
                r="14"
                stroke-dasharray="87.96459430051421"
                stroke-dashoffset="0"
                transform="rotate(-90 16 16)"
              />
            </svg>
          </div>
        </div>
        <div
          aria-hidden="true"
          class="rah-static rah-static--height-zero"
          style="height: 0px; overflow: hidden;"
        >
          <div
            style="display: none;"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PanelContainer visibleTabs 1`] = `
<DocumentFragment>
  <div>
    <div
      class="css-15owl46"
    >
      <div
        class="css-x60p33"
      >
        <div
          class="css-1vga9oy"
        >
          <button
            aria-label="display panel 1"
            class="css-1tf4h46"
          >
            open panel-1
          </button>
        </div>
        <div
          class="css-7d11p2"
        >
          <button
            aria-label="display panel 2"
            class="css-1tf4h46"
          >
            open panel-2
          </button>
        </div>
        <div
          class="css-7d11p2"
        >
          <button
            aria-label="some action without panel"
            class="css-1tf4h46"
          >
            action
          </button>
        </div>
      </div>
    </div>
    <div
      class="css-eqxzio"
    >
      <div>
        <svg
          aria-valuemax="1"
          aria-valuemin="0"
          aria-valuenow="1"
          class="css-14d2907"
          fill="none"
          height="128"
          role="img"
          stroke="currentcolor"
          stroke-width="2"
          viewBox="0 0 32 32"
          width="128"
        >
          <circle
            cx="16"
            cy="16"
            opacity="0.125"
            r="14"
          />
          <circle
            cx="16"
            cy="16"
            r="14"
            stroke-dasharray="87.96459430051421"
            stroke-dashoffset="0"
            transform="rotate(-90 16 16)"
          />
        </svg>
      </div>
      <div
        aria-hidden="true"
        class="rah-static rah-static--height-zero"
        style="height: 0px; overflow: hidden;"
      >
        <div
          style="display: none;"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;
